MDEV-6619 SHOW PROCESSLIST returns empty result set after KILL QUERY

don't send an OK packet if the SHOW PROCESSLIST was killed